[project]
name = "keycloak-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
]

[project.scripts]
keycloak-client = "keycloak_client:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]
